--- a/site/views/includes/scripts.jade
+++ b/site/views/includes/scripts.jade
@@ -1,4 +1,5 @@
 script(type='text/javascript', src='js/jquery.js')
 script(type='text/javascript', src='js/underscore.js')
 script(type='text/javascript', src='js/bootstrap.js')
+script(type='text/javascript', src='js/recorderjs/recorder.js')
 script(type='text/javascript', src='js/custom.js')
