added .wav file ending for Safari and Firefox support

--- a/site/views/list.jade
+++ b/site/views/list.jade
@@ -18,7 +18,8 @@ html(lang="en")
               li
                 span #{file.DateTime}
                 span
-                  audio(src="#{file.Key}", controls=true, type="audio/wav")
+                  audio(controls, preload)
+                    source(src="#{file.Key}")
 
       hr
       include includes/footer
