--- a/site/views/includes/header.jade
+++ b/site/views/includes/header.jade
@@ -4,7 +4,7 @@ div.fab-bg
       a.navbar-brand.brand(href="/")
         img#logo(src="img/logo.png")
       ul.nav.navbar-nav
-        - var obj = { 'home':'Home', 'record':'Record', 'list': 'List' }
+        - var obj = { 'mail':'Mail', 'record':'Record', 'list': 'List' }
           - each val, key in obj
             - if (active == key)
               li.active
