--- a/site/views/index.jade
+++ b/site/views/index.jade
@@ -4,37 +4,12 @@ html(lang="en")
     include includes/head
 
   body
-    div#container
-      include includes/header
+    div#container.white
 
       div.container
         div.row
-          div.col-lg-6.col-offset-3
-            form(action="/", method="post")
-              fieldset
-                legend Create example email
-                - function isEmptyObject(obj) {
-                -      var name;
-                -      for (name in obj) {
-                -        return false;
-                -      }
-                -      return true;
-                -    }
-                - if (isEmptyObject(errors) == false)
-                  div.alert
-                    button.btn.close(data-dismiss="alert")
-                    p
-                      strong The following errors occured!
-                    - each error in errors
-                      p #{error.msg}
-                div.form-group
-                  label(for="email") Email address
-                  input.form-control#inputEmail(type="text", name="email", placeholder="Enter email")
-
-                div.form-group
-                  label(for="inputText") Text
-                  textarea.form-control(rows="3", name="inputText", placeholder="Leave empty for default email")
-                button.btn.btn-default(type="submit") Submit
+          div.col-lg-6.col-offset-3#center
+           img(src="img/logo.png")
 
       include includes/footer
     include includes/scripts
