--- a/site/views/record.jade
+++ b/site/views/record.jade
@@ -4,6 +4,7 @@ html(lang="en")
     include includes/head
 
   body
+
     div#container
 
       include includes/header
@@ -14,7 +15,7 @@ html(lang="en")
             button.btn.btn-default#record-btn Record
             button.btn.btn-default#stop-btn(disabled) Stop
         div.row
-          div.col-lg-6.col-offset-5
+          div.col-lg-12
             img#onair(src="img/onair.png", width="150", style="display: none")
 
         hr
